trunk/OldArchive/23dfd09a18b62dad9bdc1eb972cc7d5f-1f48a68887043b2645051583fb11641d/output
main.cpp:14:40: error: in-class initialization of static data member 'const string foo::stconst' of non-literal type
     static const std::string stconst = "foo";
                                        ^
main.cpp:14:40: error: non-constant in-class initialization invalid for static member 'foo::stconst'
main.cpp:14:40: error: (an out of class initialization is required)
main.cpp:14:40: error: 'foo::stconst' cannot be initialized by a non-constant expression when being declared
